k8s/redis.service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-server
spec:
  selector:
    app: redis-server
  clusterIP: None
